force-app/main/default/objects/Course__c/fields/Awarded_By__c.field-meta.xml
<CustomField>
    <fullName>Awarded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Awarded By</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Business_Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Courses (Awarded By)</relationshipLabel>
    <relationshipName>Courses1</relationshipName>
    <type>Lookup</type>
</CustomField>