force-app/main/default/objects/Course__c/fields/Class_Count__c.field-meta.xml
<CustomField>
    <fullName>Class_Count__c</fullName>
    <description>Number of classes for this course.</description>
    <inlineHelpText>Number of classes for this course.</inlineHelpText>
    <label>Class Count</label>
    <summaryForeignKey>Class__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>