force-app/main/default/objects/Course__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>A unique code which can be used to identify the course.</inlineHelpText>
    <label>Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>