force-app/main/default/objects/Course__c/fields/Conditions__c.field-meta.xml
<CustomField>
    <fullName>Conditions__c</fullName>
    <label>Conditions</label>
    <type>TextArea</type>
</CustomField>