force-app/main/default/objects/Course__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A brief description of the course</description>
    <inlineHelpText>Brief description of the course.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>