force-app/main/default/objects/Course__c/fields/Duration_Type__c.field-meta.xml
<CustomField>
    <fullName>Duration_Type__c</fullName>
    <label>Duration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>