force-app/main/default/objects/Course__c/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <label>Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Course Format</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>