force-app/main/default/objects/Course__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <displayFormat>CO-{00000}</displayFormat>
    <externalId>true</externalId>
    <label>ID</label>
    <type>AutoNumber</type>
</CustomField>