force-app/main/default/objects/Course__c/recordTypes/Program.recordType-meta.xml
<RecordType>
    <fullName>Program</fullName>
    <active>true</active>
    <label>Program</label>
</RecordType>