force-app/main/default/objects/Course__c/validationRules/Common_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Common_Validation</fullName>
    <active>false</active>
    <description>This validation rule is use to validate that duration must be greater than zero.</description>
    <errorConditionFormula>Duration__c &lt;= 0</errorConditionFormula>
    <errorMessage>Please input valid information as in duration must be greater than zero.</errorMessage>
</ValidationRule>