force-app/main/default/objects/Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Location__c</columns>
    <columns>Code__c</columns>
    <columns>Credits__c</columns>
    <columns>Status__c</columns>
    <columns>Class_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>