force-app/main/default/objects/Course__c/listViews/All_Active_Programs.listView-meta.xml
<ListView>
    <fullName>All_Active_Programs</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Course__c.Program</value>
    </filters>
    <label>All Active Programs</label>
</ListView>