force-app/main/default/objects/Course__c/listViews/All_InActive_Courses.listView-meta.xml
<ListView>
    <fullName>All_InActive_Courses</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Inactive</value>
    </filters>
    <label>All InActive Courses</label>
</ListView>