force-app/main/default/objects/Course__c/listViews/All_Programs.listView-meta.xml
<ListView>
    <fullName>All_Programs</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Awarded_By__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Course__c.Program</value>
    </filters>
    <label>All Programs</label>
</ListView>